--- a/js-120812/풀이과정.md
+++ b/js-120812/풀이과정.md
@@ -98,7 +98,7 @@ function solution(array) {
                 max.num = cmp.num;
                 max.cnt = cmp.cnt;
                 max.isDuplicate = false;
-            } else if (cmp.cnt === max.cnt) 
+            } else if (cmp.cnt === max.cnt)  {
                 max.isDuplicate = true;
             cmp.num = x;
             cmp.cnt = 0;
